testスクリプトを追加(CIがこけないように)

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "npm run check",
     "check": "textlint ../curriculum/*/*.md",
     "check:fix": "textlint --fix ../curriculum/*/*.md",
-    "gen-report": "node ./gen-report/index.js"
+    "gen-report": "node ./gen-report/index.js",
+    "test": "echo 'Error: no test specified'"
   },
   "repository": {
     "type": "git",
