スタイルガイド準拠のカスタムルールを作成する土台作成

--- a/.textlintrc
+++ b/.textlintrc
@@ -7,6 +7,7 @@
         "allowFullWidthQuestion": true,     // 全角の「？」を使えるようにする
       }
     },
+    "preset-techpit-host-guide": true,
     "prh": {
       "rulePaths" :[
         "rules.yml"
