--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   },
   "homepage": "https://github.com/Techpit-Market/curriculum-textlint#readme",
   "devDependencies": {
+    "pug": "^3.0.2",
     "textlint": "^11.0.1",
     "textlint-rule-preset-ja-technical-writing": "^3.1.0",
+    "textlint-rule-preset-techpit-host-guide": "file:textlint-rule-preset-techpit-host-guide",
     "textlint-rule-prh": "^5.2.0"
   }
 }
