--- a/textlint-rule-preset-techpit-host-guide/package.json
+++ b/textlint-rule-preset-techpit-host-guide/package.json
@@ -3,15 +3,12 @@
   "keywords": [
     "textlintrule"
   ],
-  "main": "lib/index.js",
+  "main": "src/index.js",
   "files": [
-    "lib/",
     "src/"
   ],
   "scripts": {
-    "test": "textlint-scripts test",
-    "build": "textlint-scripts build",
-    "prepublish": "npm run --if-present build"
+    "test": "textlint-scripts test"
   },
   "devDependencies": {
     "textlint-scripts": "^12.0.2",
@@ -20,7 +17,7 @@
   "name": "textlint-rule-preset-techpit-host-guide",
   "directories": {
     "test": "test"
-  },  
+  },
   "license": "MIT",
   "description": ""
 }
